# mflags

./: .gitignore  CMakeLists.txt  README.md  mflags.cpp  mflags.h  mflags_test.cpp
tests/: example_program.cpp  mflags_example.cpp  mflags_test  mflags_test.cpp  mflags_test1.cpp  mflags_test2.cpp  run.sh  shared_lib.cpp
